# sudokusolver-rs

./: Cargo.toml  README.md
problems/: testprob1.txt  testprob2.txt  testprob3.txt
src/: bin.rs  lib.rs  main.rs
