[package]
name = "sudokusolver-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { version = "3.0", default-features = false }
csv = "1.1"

[lib]
name = "sudokusolver_rs"
path = "src/lib.rs"

[[bin]]
name = "sudokusolver_bin"
path = "src/bin.rs"
